Fix remaining Math.clamp patterns in ResponsiveCardGrid and RootApplication